use Java14 "text blocks" preview feature